add serial communicate
链接中增加Qt5SerialPortd.lib和Qt5SerialBusd.lib，否则会出现链接错误，串口尚未调通

--- a/QtGuiVisionPrj/QtGuiVisionPrj/QtGuiVisionPrj.vcxproj
+++ b/QtGuiVisionPrj/QtGuiVisionPrj/QtGuiVisionPrj.vcxproj
@@ -98,7 +98,7 @@
       <OutputFile>$(OutDir)\$(ProjectName).exe</OutputFile>
       <AdditionalLibraryDirectories>$(QTDIR)\lib;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalDependencies>qtmaind.lib;Qt5Cored.lib;Qt5Guid.lib;Qt5Widgetsd.lib;opencv_world331d.lib;opencv_world331.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>qtmaind.lib;Qt5Cored.lib;Qt5Guid.lib;Qt5Widgetsd.lib;opencv_world331d.lib;opencv_world331.lib;Qt5SerialBusd.lib;Qt5SerialPortd.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
     <QtMoc>
       <OutputFile>.\GeneratedFiles\$(ConfigurationName)\moc_%(Filename).cpp</OutputFile>
