--- a/.gitignore
+++ b/.gitignore
@@ -240,3 +240,8 @@ ModelManifest.xml
 
 # FAKE - F# Make
 .fake/
+##############################
+## Folders                  ##
+##############################
+target
+OpenCV_SVO/OpenCV_SVO/features/eigen3
