--- a/OpenCV_SVO/OpenCV_SVO/OpenCV_SVO.vcxproj
+++ b/OpenCV_SVO/OpenCV_SVO/OpenCV_SVO.vcxproj
@@ -106,6 +106,7 @@
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
       <SDLCheck>true</SDLCheck>
+      <AdditionalIncludeDirectories>D:\Codes\githubcodes\StereoVision-InertialSensorFilter\OpenCV_SVO\OpenCV_SVO\features</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
