--- a/.gitignore
+++ b/.gitignore
@@ -247,3 +247,4 @@ target
 OpenCV_SVO/OpenCV_SVO/features/eigen3
 OpenCV_SVO/OpenCV_SVO/features/boost
 OpenCV_SVO/OpenCV_SVO/features/vikit
+datasetanalysis/dataset
