--- a/SLAMresearch/Environment/Environment.csproj
+++ b/SLAMresearch/Environment/Environment.csproj
@@ -52,6 +52,7 @@
     <Compile Include="MainForm.Designer.cs">
       <DependentUpon>MainForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="MapClass.cs" />
     <Compile Include="MapKeyPoint.cs" />
     <Compile Include="MouseOpr.cs" />
     <Compile Include="Program.cs" />
